kidz-world html completed

--- a/index.html
+++ b/index.html
@@ -23,28 +23,80 @@
     <div class="items">
     <div class="heading1"><p>Discover New Books</p></div>
     <div class="books">
-        <div class="book1"><img src="assets/book1.png" alt=""></div>
-        <div class="book2"><img src="assets/book2.png" alt=""></div>
-        <div class="book3"><img src="assets/book3.png" alt=""></div>
-        <div class="book4"><img src="assets/book4.png" alt=""></div>
-        <div class="book5"><img src="assets/book5.png" alt=""></div>
-        <div class="book6"><img src="assets/book6.png" alt=""></div>
+        <div class="book1"><img src="assets/book1.png" alt="">
+        <p class="item-name">This was our pact</p>
+        <p class="item-author">Ryan Andrews</p>
+        <div class="shopping"> <p class="item-price">$7.49</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png" class="i" alt=""></button></div></div>
+        <div class="book2"><img src="assets/book2.png" alt="">
+            <p class="item-name">The famous five</p>
+            <p class="item-author">Guid Blyton</p>
+            <div class="shopping"> <p class="item-price">$4.59</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png"class="i" alt=""></button></div></div>
+        <div class="book3"><img src="assets/book3.png" alt="">
+            <p class="item-name">matlids</p>
+            <p class="item-author">Roald Dahi</p>
+            <div class="shopping"> <p class="item-price">$6.80</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png"class="i" alt=""></button></div></div>
+        <div class="book4"><img src="assets/book4.png" alt="">
+            <p class="item-name">Harry Potter</p>
+            <p class="item-author">JK Rowling</p>
+            <div class="shopping"> <p class="item-price">$10</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png" class="i"alt=""></button></div></div>
+        <div class="book5"><img src="assets/book5.png" alt="">
+            <p class="item-name">For Young Readers</p>
+            <p class="item-author">Ruskin Bond</p>
+            <div class="shopping"> <p class="item-price">$7.29</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png"class="i" alt=""></button></div></div>
+        <div class="book6"><img src="assets/book6.png" alt="">
+            <p class="item-name">Wimpy Kid - DIY</p>
+            <p class="item-author">Jelf Kinney</p>
+            <div class="shopping"> <p class="item-price">$4.99</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png" class="i"alt=""></button></div></div>
     </div>
     <div class="heading2"><p>Discover New Games</p></div>
     <div class="games">
-        <div class="game1"><img src="assets/dart-board.png" alt=""></div>
-        <div class="game2"><img src="assets/connect-four.png" alt=""></div>
-        <div class="game3"><img src="assets/jenga.png" alt=""></div>
-        <div class="game4"><img src="assets/monopoly.png" alt=""></div>
+        <div class="game1"><img src="assets/dart-board.png" alt="">
+            <p class="item-name">Dart Board</p>
+            <p class="item-author">Wooden Board,16 inches</p>
+            <div class="shopping"> <p class="item-price">$17.49</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png"class="i" alt=""></button></div></div>
+        <div class="game2"><img src="assets/connect-four.png" alt="">
+            <p class="item-name">Connect 4</p>
+            <p class="item-author">Board game,multiplayer</p>
+            <div class="shopping"> <p class="item-price">$19.99</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png"class="i" alt=""></button></div></div>
+        <div class="game3"><img src="assets/jenga.png" alt="">
+            <p class="item-name">Jenga</p>
+            <p class="item-author">wooden blocks,54 pieces</p>
+            <div class="shopping"> <p class="item-price">$20.99</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png" class="i"alt=""></button></div></div>
+        <div class="game4"><img src="assets/monopoly.png" alt="">
+            <p class="item-name">Monopoly</p>
+            <p class="item-author">1.61 x 15.75 x 10.51 inches</p>
+            <div class="shopping"> <p class="item-price">$19.49</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png" class="i"alt=""></button></div></div>
     </div>
     <div class="heading3"><p>Hadmade with love</p></div>
     <div class="handmade-items">
-        <div class="hmitem1"><img src="assets/bookmarks.png" alt=""></div>
-        <div class="hmitem2"><img src="assets/birthday-card.png" alt=""></div>
-        <div class="hmitem3"><img src="assets/stuffed-toy.png" alt=""></div>
-        <div class="hmitem4"><img src="assets/dream-catcher.png" alt=""></div>
+        <div class="hmitem1"><img src="assets/bookmarks.png" alt="">
+            <p class="item-name">Bookmarks</p>
+            <p class="item-author">Handmade with love</p>
+            <div class="shopping"> <p class="item-price">$12.49</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png" class="i"alt=""></button></div></div>
+        <div class="hmitem2"><img src="assets/birthday-card.png" alt="">
+            <p class="item-name">Birthday card</p>
+            <p class="item-author">Handmade with love</p>
+            <div class="shopping"> <p class="item-price">$19.99</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png"class="i" alt=""></button></div></div>
+        <div class="hmitem3"><img src="assets/stuffed-toy.png" alt="">
+            <p class="item-name">Stuffed toys</p>
+            <p class="item-author">Handmade with love</p>
+            <div class="shopping"> <p class="item-price">$15.99</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png" class="i"alt=""></button></div></div>
+        <div class="hmitem4"><img src="assets/dream-catcher.png" alt="">
+            <p class="item-name">Dream catcher drawing</p>
+            <p class="item-author">Handmade with love</p>
+            <div class="shopping"> <p class="item-price">$18.49</p><button type="button"><p>Add</p><img src="assets/cart-icon-white.png" class="i"alt=""></button></div></div>
     </div>
     </div>
-    <div class="brought-to-you-by"></div>
+    <div class="brought-to-you-by">
+       <div class="side1">
+       <p class="name">Brought to you by</p>
+       <p><img src="assets/krishti.png" alt=""></p>
+       </div>
+       <div class="side2">
+        <p class="name">Krishti</p>
+        <p>Made with ❤ by Kalvian</p>
+        <p>talk to me at krishti@gmail.com</p>
+       </div>
+    </div>
 </body>
 </html>
