--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         </div>
     </div>
     <div class="kw-bg">
-        <img src="assets/kw-background.png" alt="" srcset="">
+        <h1>Shop.</h1>
+        <h1>Have Fun.</h1>
+        <h1>Repeat</h1>
+        <h2>#NewandNow</h2>
     </div>
     <div class="items">
     <div class="heading1"><p>Discover New Books</p></div>
